# next-feature-bot

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: actions.yml
app/: logger.py  main.py  settings.py
app/api/endpoints/: botx.py
app/bot/: bot.py  bot_with_help.py  botx_method_utils.py  datastructures.py  debug_messages.py  debug_utils.py  file_utils.py  formatting.py  handler_with_help.py  mentions.py  regular_expressions.py
app/bot/commands/: administration.py  botx_callback_method.py  botx_method.py  common.py  credentials.py  debug.py  edit.py  events.py  files.py  internal_bot_notification.py  markup.py  mentions.py  search.py  spam.py  special_messages.py  users_as_csv.py
app/bot/error_handlers/: internal_error.py
app/bot/middlewares/: answer_error_message.py  debug_messages.py  tmp_file.py
app/resources/: strings.py
app/resources/templates/: help.txt.mako
files/: file.doc  file.docx
scripts/: build  format  lint
