# https://python-poetry.org/docs/

[tool.poetry]
name = "next-feature-bot"
version = "0.1.0"
description = "Бот для тестирования функционала BotX (на базе ветки `next` из репозитория `pybotx`)"
authors = []


[tool.poetry.dependencies]
python = "~3.9"

pybotx = { path = "./pybotx-submodule", develop = true }
fastapi = "~0.75.0 "
pydantic = { version = "~1.8.2", extras = ["dotenv"] }
uvicorn = "~0.15.0"
mako = "~1.1.6"


[tool.poetry.dev-dependencies]
autoflake = "1.4.0"
black = "21.9b0"
isort = "5.9.3"
mypy = "0.910.0"
wemake-python-styleguide = "0.15.3"

flake8-bandit = "2.1.2"  # https://github.com/PyCQA/bandit/issues/837
bandit = "1.7.2"  # https://github.com/PyCQA/bandit/issues/837

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
