# https://python-poetry.org/docs/

[tool.poetry]
name = "next-feature-bot"
version = "0.1.0"
description = "Бот для тестирования функционала BotX (на базе ветки `next` из репозитория `pybotx`)"
authors = []


[tool.poetry.dependencies]
python = "~3.10"

pybotx = { path = "./pybotx-submodule", develop = true }
fastapi = "~0.103.0"
pydantic = {version = "~2.6.0", extras = ["pydantic-settings"]}
uvicorn = "~0.23.2"
mako = "^1.2.2"
httpcore = "~1.0.2"
aiocsv = "~1.2.3"
pydantic-settings = "^2.2.1"


[tool.poetry.dev-dependencies]
autoflake = "1.4.0"
black = "22.3.0"
isort = "5.10.1"
mypy = "~1.0.1"
wemake-python-styleguide = "0.16.0"

flake8-bandit = "2.1.2"  # https://github.com/PyCQA/bandit/issues/837
bandit = "1.7.2"  # https://github.com/PyCQA/bandit/issues/837

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
